# django-repo

./: Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
djangoRepo/: asgi.py  settings.py  urls.py  wsgi.py
todo/: models.py  serializers.py  throttles.py  urls.py  views.py
todo/migrations/: 0001_initial.py
